# lolibc

./: .travis.yml  README.md  ci.sh  closefrom.c  meson.build  readpassphrase.c  strsignals.c  sys_signame.c  sys_signame.sh
.github/workflows/: build.yml
include/: fcntl.h  limits.h  pwd.h  readpassphrase.h  signal.h  stddef.h  stdlib.h  string.h  unistd.h
include/sys/: cdefs.h  resource.h  stat.h  time.h  types.h  uio.h
